# jersey-number-pipeline

./: .Dockerignore  .gitignore  DL_FullRun.ipynb  Dockerfile  README.md  centroid_reid.py  colab_notebook.ipynb  colab_train_digit_count.ipynb  configuration.py  digit_count_classifier.py  docker-compose.yaml  downloadables.py  esrgan.py  evaluate.py  gaussian_outliers.py  helpers.py  jersey_number_dataset.py  legibility_classifier.py  main.py  networks.py  pose.py  requirements.txt  setup.py  str.py
aggregation/: .env.template  dataset.py  download_data.sh  evaluate.py  model.py  pyproject.toml  requirements.txt  setup_narval.sh  submit_narval.sh  sweep_narval.sh  train.py  wandb_sync_loop.sh
aggregation/conf/: config.yaml  sweep.yaml
aggregation/slurm/: agent.sh  run.sh  setup.sh  sweep.sh  train.sh
digit_classifier/: .env.template  dataset.py  infer.py  model.py  pyproject.toml  train.py
digit_classifier/conf/: sweep.yaml
digit_classifier/slurm/: agent.sh  interactive_agent.sh  run.sh  setup.sh  sweep.sh  train.sh
scripts/: download_data.py  evaluate.py  train_digit_count.py  upscale_image_batch.py
src/config/: super_resolution.yaml
src/interfaces/: base.py  super_resolution.py
src/model/recognizer/: attention_recognition_head.py
str/parseq/requirements/: constraints.txt  core.txt  train.txt  tune.txt
